<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_toggle_report"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_toggle_report"
    android:orientation="horizontal">

    <Button
        android:id="@+id/bt_day"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_button_report"
        android:text="@string/day"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bt_week"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/week"
        android:textColor="#DCDCDC" />

    <Button
        android:id="@+id/bt_month"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/month"
        android:textColor="#DCDCDC" />

    <Button
        android:id="@+id/bt_year"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/year"
        android:textColor="#DCDCDC" />

</LinearLayout>