<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingTop="15dp"
    android:paddingBottom="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:id="@+id/rl_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="onClick">
        <TextView
            android:id="@+id/nav_dashboard"
            android:textColor = "#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/nav_dashboard"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="onClick">
        <TextView
            android:id="@+id/nav_profile"
            android:textColor = "#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/nav_profile"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="onClick">
        <TextView
            android:id="@+id/nav_my_report"
            android:textColor = "#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/nav_my_report"
            android:layout_centerVertical="true" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/nav_my_report"
            android:layout_marginLeft="10dp">
            <include layout="@layout/menu_dot" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_help_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="onClick">
        <TextView
            android:id="@+id/nav_help_center"
            android:textColor = "#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/nav_help_center"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="onClick">
        <TextView
            android:id="@+id/nav_settings"
            android:textColor = "#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:text="@string/nav_settings" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="onClick">
        <TextView
            android:id="@+id/nav_logout"
            android:textColor = "#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/nav_logout"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</LinearLayout>