<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@android:color/transparent">

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/bg_white_rounded_10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:text="@string/dialog_watched"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_eye_watched"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B2B2B2"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/bt_see_all"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/see_all"
            android:background="@drawable/selector_blue_grey"/>

        <TextView
            android:id="@+id/tv_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textColor="#7F7F7F"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />

</LinearLayout>